--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + Svelte</title>
   </head>
   <body>
-  hjgjhgjk hhjhjhhjhjjhjjj
+  hjgjhgjk hhjhjhhjhjjhjjj ghjhgjh
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
